--- a/Family/assets/www/eat.html
+++ b/Family/assets/www/eat.html
@@ -17,43 +17,8 @@
   <div class="row clearfix"><img src="images/eat.jpg" class="img-responsive" alt="stay"></div>
   <h4 class="pull-left">Your search results:</h4>
   <div class="row">
-    <ul class="search-list clearfix">
-      <li>
-        <div class="media">
-          <div class="media-left"> <a href="#"> <img alt="64x64" src="images/64.jpg" class="media-object" style="width: 64px; height: 64px;"> </a> </div>
-          <div class="media-body">
-            <h4 class="media-heading" id="media-heading">Media heading<a href="#media-heading" class="anchorjs-link"></a></h4>
-            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.<a href="#"><img src="images/next.png" class="pull-right" alt="stay"></a></p>
-          </div>
-        </div>
-      </li>
-      <li>
-        <div class="media">
-          <div class="media-left"> <a href="#"> <img alt="64x64" src="images/64.jpg" class="media-object" style="width: 64px; height: 64px;"> </a> </div>
-          <div class="media-body">
-            <h4 class="media-heading" id="media-heading">Media heading<a href="#media-heading" class="anchorjs-link"></a></h4>
-            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.<a href="#"><img src="images/next.png" class="pull-right" alt="stay"></a></p>
-          </div>
-        </div>
-      </li>
-      <li>
-        <div class="media">
-          <div class="media-left"> <a href="#"> <img alt="64x64" src="images/64.jpg" class="media-object" style="width: 64px; height: 64px;"> </a> </div>
-          <div class="media-body">
-            <h4 class="media-heading" id="media-heading">Media heading<a href="#media-heading" class="anchorjs-link"></a></h4>
-            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.<a href="#"><img src="images/next.png" class="pull-right" alt="stay"></a></p>
-          </div>
-        </div>
-      </li>
-      <li>
-        <div class="media">
-          <div class="media-left"> <a href="#"> <img alt="64x64" src="images/64.jpg" class="media-object" style="width: 64px; height: 64px;"> </a> </div>
-          <div class="media-body">
-            <h4 class="media-heading" id="media-heading">Media heading<a href="#media-heading" class="anchorjs-link"></a></h4>
-            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.<a href="#"><img src="images/next.png" class="pull-right" alt="stay"></a></p>
-          </div>
-        </div>
-      </li>
+    <ul class="search-list clearfix" id="mainUl">
+      
     </ul>
   </div>
   <div class="row margintop20">
