--- a/Family/assets/www/eat.html
+++ b/Family/assets/www/eat.html
@@ -22,7 +22,7 @@
     </ul>
   </div>
   <div class="row margintop20">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"><img src="images/random-fun-again.png" class="img-responsive center-block" alt="random-fun-again" onclick="gotoDetailPage();"></div>
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"><img src="images/random-fun-again.png" class="img-responsive center-block" alt="random-fun-again" onclick="gotoSearchScreen();"></div>
   </div>
   <div class="row clearfix margintop20"><img src="images/footer.png" class="img-responsive" alt="footer"></div>
 </div>
