commited by ishan

--- a/Family/assets/www/result-info.html
+++ b/Family/assets/www/result-info.html
@@ -49,10 +49,10 @@
   <div class="row margintop20">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 address"><img src="images/map.png" class="pull-left" alt="heart">
       <h4 class="pull-left" id="address"></h4>
-      <img src="images/call.png" class="pull-left" alt="call"> <img src="images/mouse.png" class="pull-left" alt="mouse"> </div>
+      <img src="images/call.png" class="pull-left" alt="call" id="call"> <img src="images/mouse.png" class="pull-left" alt="mouse">  </div>
   </div>
   <div class="row margintop20">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"><img src="images/random-fun-again.png" class="img-responsive center-block" alt="random-fun-again"></div>
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center"><img src="images/random-fun-again.png" class="img-responsive center-block" alt="random-fun-again" onclick="gotoSearchScreen();"></div>
   </div>
   <div class="row clearfix margintop20"><img src="images/footer.png" class="img-responsive" alt="footer"></div>
 </div>
